--- a/app.json
+++ b/app.json
@@ -1,10 +1,9 @@
 {
-    "name": "WhatsAsenaDuplicated",
-    "description": "WhatsAsena project - Makes it easy and fun to use Whatsapp. World’s first UserBot made for WhatsApp.",
+    "name": "WhatsApoduplicated",
     "logo": "https://i.hizliresim.com/6Bbj7i.jpg",
-    "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
-    "repository": "https://github.com/phaticusthiccy/WhatsAsenaDuplicated",
-    "website":   "https://t.me/phaticusthiccy",
+    "keywords": ["whatsapp", "bot", "api", "ai"],
+    "repository": "https://github.com/abdullah5151/WhatsApoDuplicated",
+    "website":   "https://i.hizliresim.com/m5nm0yt.png",
     "success_url": "https://t.me/AsenaSupport",
     "stack": "container",
     "env": {
